--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                     <button class="content-section__container3__btn">submit</button>
                 </form>
             </div>
+            <div class="content-section__display clearfix">
+                <h1 class="content-section__display__text-box__title">placeholder</h1>
+                <img src="" alt="" class="content-section__display__img">
+                <div class="content-section__display__text-box">
+                    <ul>
+                        <li class="content-section__display__text-box__item"></li>
+                        <li class="content-section__display__text-box__item"></li>
+                        <li class="content-section__display__text-box__item"></li>
+                    </ul>
+                    <a href="#" class="text-box__link"></a>
+                </div>
+            </div>
         </section>
     </main>
 <!-- jQuery CDN -->
