styling finished, logic finshed, responsiveness finished

--- a/index.html
+++ b/index.html
@@ -5,61 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Nunito+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/_styles.css">
 </head>
 <body class="background">
-    <!-- <ul class="background__roster">
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-        <li class="background__roster__icon"><img src="images/icons/noun_350629_cc.svg" alt="" class="icon"></li>
-    </ul> -->
-   
-    
     <main class="viewport">
         <section class="content-section">
-            <div class="content-section__container1">
+            <div class="content-section__container1 clearfix">
                 <h1 class="content-section__container1__title">grow your fruit</h1>
                 <p class="content-section__container1__para">Let this quiz help you decide what kind of fruit to plant on your balcony or in your backyard this season.</p>
                 <button class="content-section__container1__btn">Take The Quiz</button>
             </div>
             <div class="content-section__container2">
-                <h1>location</h1>
-                <p>First tell us where you live!</p>
+                <h2>Tell us where you live  &#128076;</h2>
                 <p>By using data from Canada's <a href="http://www.planthardiness.gc.ca/?m=1" target="_blank">plant hardiness zones</a> we'll be able to determine what grows best in your area</p>
                 <form action="#">
-                    <label for="city">Select your city</label>
+                    <label for="city" class="container2__label">Select your city: </label>
                     <select name="cityList" id="city" class="content-section__container2__select"></select>
                     <button class="content-section__container2__btn">next</button>
                 </form>
             </div>
             <div class="content-section__container3">
-                <h1>tree or bush</h1>
+                <h2>Tree or bush?</h2>
                 <p>Do you prefer fruit from fruit trees or berry bushes?</p>
                 <form action="#" class="content-section__container3__radio">
-                    <input type="radio" name="tree-bush" value="tree">
-                    <input type="radio" name="tree-bush" value="bush">
+                    <label for="tree">Tree</label>
+                    <input type="radio" name="tree-bush" value="tree" id="tree">
+                    <label for="bush">Bush</label>
+                    <input type="radio" name="tree-bush" value="bush" id="bush">
                     <button class="content-section__container3__btn">submit</button>
                 </form>
             </div>
             <div class="content-section__display clearfix">
-                <h1 class="content-section__display__text-box__title">placeholder</h1>
+                <h1 class="content-section__display__title">placeholder</h1>
                 <img src="" alt="" class="content-section__display__img">
                 <div class="content-section__display__text-box">
-                    <ul>
-                        <li class="content-section__display__text-box__item"></li>
-                        <li class="content-section__display__text-box__item"></li>
-                        <li class="content-section__display__text-box__item"></li>
-                    </ul>
-                    <a href="#" class="text-box__link"></a>
+                    <ul class="display__text-box__list"></ul>
+                    <a href="#" target="_blank" class="display__text-box__link">read more</a>
                 </div>
             </div>
+            <button class="reset-btn">Reset</button>
         </section>
     </main>
 <!-- jQuery CDN -->
