--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Bungee|Nunito+Sans:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="styles/_styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body class="background">
     <main class="viewport">
